2006-12-05 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/OverlayOp.cpp: Use EdgeNodingValidator
	  instead of OverlayResultValidator (faster and more effective).
	  Note that compile-time defines can select use of either or both
	  ones.
	* source/headers/geos/geom/BinaryOp.h: be quiet if not in DEBUG mode.
	* noding::NodingValidator.h: throw TopologyException
	  rather then a generic GEOSException.

2006-12-04 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geomgraph/EdgeNodingValidator.h:
	  fix members initialization order.
	* geomgraph::EdgeNodingValidator: minor cleanup
	  to use references args instead of pointers for
	  method that doesn't handle NULLs anyway.

2006-12-04 Sandro Santilli <strk@refractions.net>

	* tests/unit/capi/: GEOSCoordSeq.cpp => GEOSCoordSeqTest.cpp
	* tests/unit/capi/GEOSSimplifyTest.cpp: new test
	  for GEOSSimplify (just a test for bug #134).
	* source/simplify/DouglasPeuckerLineSimplifier.cpp (simplify):
	  don't try to simplify empty coordinate lists. Fixes bug #134.

2006-12-04 Sandro Santilli <strk@refractions.net>

	* tests/unit/geom/CoordinateArraySequenceTest.cpp:
	  added tests for setOrdinate()
	* tests/unit/capi/GEOSCoordSeq.cpp: 
	  add tests for bug #133 (failing).
	* source/geom/CoordinateArraySequence.cpp (setOrdinate):
	  fix bug #133.

2006-11-30 Sandro Santilli <strk@refractions.net>

	* tests/unit/: Makefile.am, capi/GEOSCoordSeq.cpp:
	  new experimental test for C-API GEOSCoordSeq.
	* capi/geos_c.cpp (GEOSCoordSeq_create): removed
	  suspicious static cast.

2006-11-15 Sandro Santilli <strk@refractions.net>

	* source/geom/Point.cpp (equalsExact): don't segfault
	  on empty points. Fixes bug #132.

2006-11-22 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: stmlf-cases-20061020.xml,
	  Makefile.am: add more robustness testcases.

2006-11-22 dron@ak4719.spb.edu

	* autogen.sh: call 'autoheader' after 'aclocal'.
	  Fixes bug #131
